tests/fixtures/invalid/pow_str_int_str.py
# Cannot call pow() with Str, Int, Str
x = pow("hello", 1, "hello")
